<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_filter_popular"
        android:orderInCategory="100"
        android:title="@string/action_filter_popular"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_filter_top_rated"
        android:orderInCategory="200"
        android:title="@string/action_filter_top_rated"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_filter_favorite"
        android:orderInCategory="300"
        android:title="@string/action_filter_favorite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:title="@string/action_settings"
        app:showAsAction="never"/>

</menu>
