<?xml version="1.0" encoding="utf-8"?>
<!--
    // Use <layout> as the root tag for Data Binding for activity_detail to generate the ActivityDetailBinding
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activity.DetailActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:fitsSystemWindows="true">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/movie_backdrop_iv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/movie_backdrop_image"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/AppBar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!--<ScrollView-->
            <!--android:id="@+id/scroll"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/app_bar">-->

            <!--<ScrollView-->
            <!--android:id="@+id/scrollView"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="0dp"-->
            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
            <!--app:layout_constraintBottom_toBottomOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/app_bar">-->


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:id="@+id/movie_data_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0">

                    <!--Surprised that ConstraintLayout required inside CardView
                        Not as clean, but otherwise layout problem with varying size of
                        plot_synopsis_tv and trailers_label with layout_constraintTop_toBottomOf plot_synopsis_tv,
                        sometimes left the movie_poster_iv dangling down.  So, solution was to wrap movie data
                        with a container. -->
                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/title_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Title"/>

                        <TextView
                            android:id="@+id/release_date_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/label_release_date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/title_tv"/>

                        <TextView
                            android:id="@+id/release_date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBottom_toBottomOf="@+id/release_date_label"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/release_date_label"
                            tools:text="Release Date"/>

                        <TextView
                            android:id="@+id/vote_average_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/label_user_rating"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/release_date_label"/>

                        <TextView
                            android:id="@+id/vote_average_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="8dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintBottom_toBottomOf="@+id/vote_average_label"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toEndOf="@+id/vote_average_label"
                            tools:text="user rating"/>

                        <TextView
                            android:id="@+id/plot_synopsis_tv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="8dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            app:layout_constraintEnd_toStartOf="@+id/movie_poster_iv"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/vote_average_label"
                            app:layout_constraintVertical_bias="0.0"
                            tools:text="Overview"/>

                        <ImageView
                            android:id="@+id/movie_poster_iv"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginRight="16dp"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/movie_poster_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.25"
                            app:layout_constraintStart_toEndOf="@+id/plot_synopsis_tv"
                            app:layout_constraintTop_toTopOf="@+id/plot_synopsis_tv"
                            app:layout_constraintVertical_bias="0.0"/>

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/trailer_data_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/movie_data_cv"
                    app:layout_constraintVertical_bias="0.0">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:id="@+id/trailers_divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:background="?android:attr/listDivider"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/trailers_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/label_trailers"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trailers_divider"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/trailers_recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/trailers_label"/>

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/reviews_data_cv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/trailer_data_cv"
                    app:layout_constraintVertical_bias="0.0">

                    <android.support.constraint.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/reviews_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/label_reviews"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <android.support.v7.widget.RecyclerView
                            android:id="@+id/reviews_recyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="16dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginRight="16dp"
                            android:layout_marginStart="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/reviews_label"
                            app:layout_constraintVertical_bias="0.0"/>

                    </android.support.constraint.ConstraintLayout>

                </android.support.v7.widget.CardView>

            </android.support.constraint.ConstraintLayout>

            <!--</ScrollView>-->
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>